# CCB_PairwiseAlignment

./: Cargo.toml  README.md
banded_global_alignment/: Cargo.toml
banded_global_alignment/src/: main.rs
bitpal/: Cargo.toml
bitpal/src/: bitpal_errors.rs  lib.rs  main.rs
fasta_reader/src/: lib.rs
hirschberg/: Cargo.toml
hirschberg/src/: lib.rs  main.rs
needleman_wunch/: Cargo.toml
needleman_wunch/src/: lib.rs  main.rs
needleman_wunsch/: Cargo.toml
needleman_wunsch/src/: lib.rs  main.rs
needleman_wunsch_delta_encoded/: Cargo.toml
needleman_wunsch_delta_encoded/src/: lib.rs  main.rs
tests/: dna_input.fasta  input.fasta  multiline_input.fasta  verylarge.fasta
