[package]
name = "bitpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
fasta_reader = { path = "../fasta_reader" }
needleman_wunsch = { path = "../needleman_wunsch" }
rand = "0.9.0-alpha.0"

[profile.dev]
overflow-checks = false